--- a/belladonna.properties
+++ b/belladonna.properties
@@ -1,9 +1,12 @@
 #Blake Belladonna
-#Thu Mar 07 22:23:51 CST 2019
-message_expired_time=604800
-create_theme=.\\create.html
-port=7000
-message_theme=.\\message.html
-succeed_theme=.\\createSucceed.html
+#Fri Mar 08 08:35:09 CST 2019
 ip=127.0.0.1
-data_directory=.\\messages
+port=7000
+data_directory=messages
+message_theme=message.html
+create_theme=create.html
+succeed_theme=createSucceed.html
+#7days, in unit of second
+message_expired_time=604800
+#allow at max of 500000 massage files on system
+max_messages=500000
